force-app/main/default/objects/Liability_Summary__c/Liability_Summary__c.object-meta.xml
<CustomObject>
    <label>Liability Summary</label>
    <nameField>
        <displayFormat>LB-{00000}</displayFormat>
        <label>Liability Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liabilities Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>