force-app/main/default/objects/Liability_Summary__c/fields/Application_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Application_Underwriting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Underwriting</label>
    <referenceTo>Application_Underwriting__c</referenceTo>
    <relationshipLabel>Liabilities Summary</relationshipLabel>
    <relationshipName>Liabilities_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>