force-app/main/default/objects/Liability_Summary__c/fields/Calculated_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Net_Worth__c</fullName>
    <label>Calculated Net Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>