force-app/main/default/objects/Liability_Summary__c/fields/Liability_Name__c.field-meta.xml
<CustomField>
    <fullName>Liability_Name__c</fullName>
    <label>Liability Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>