force-app/main/default/objects/Liability_Summary__c/fields/Liability_Type__c.field-meta.xml
<CustomField>
    <fullName>Liability_Type__c</fullName>
    <label>Liability Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Student Loan</fullName>
            </value>
            <value>
                <fullName>Credit Card Debt</fullName>
            </value>
            <value>
                <fullName>Notes Payable</fullName>
            </value>
            <value>
                <fullName>Real Estate/Mortgage</fullName>
            </value>
            <value>
                <fullName>Other Expenses</fullName>
            </value>
            <value>
                <fullName>Fed and State Tax</fullName>
            </value>
            <value>
                <fullName>HELOC</fullName>
            </value>
            <value>
                <fullName>Utility Payments</fullName>
            </value>
            <value>
                <fullName>Family Expenses</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>