force-app/main/default/objects/Liability_Summary__c/fields/Stated_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Stated_Net_Worth__c</fullName>
    <label>Stated Net Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>