force-app/main/default/objects/Liability_Summary__c/fields/Total_Liabilities_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Liabilities_Amount__c</fullName>
    <label>Total Liabilities Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>